--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST=localhost
-DB_USER=Diego
-DB_PASSWORD=Marcosdiego9!
-DB_NAME=memorize_verse
+DB_HOST=mysql.railway.internal
+DB_USER=root
+DB_PASSWORD=cLytbcVXOiloQxifsSqXyvrvyeNvIhSV
+DB_NAME=railway
 DB_PORT=3306
 PORT=5000
