--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
+# Railway provides this environment variable
+DATABASE_URL=mysql://root:cLytbcVXOiloQxifsSqXyvrvyeNvIhSV@mysql.railway.internal:3306/railway
+
+# Keep these as fallbacks
 DB_HOST=mysql.railway.internal
 DB_USER=root
 DB_PASSWORD=cLytbcVXOiloQxifsSqXyvrvyeNvIhSV
